overflow and max-width fixed hieght

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 .one{
   background-color: aquamarine;
   max-width: 600px;
+  height: 300px;
+  overflow: visible;
 }
 .two{
   background-color: blueviolet;
